--- a/API/.env
+++ b/API/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=mongodb+srv://joy_sharon:Joy@123456@atlascluster.l2inhnf.mongodb.net/test
+DATABASE_URL=mongodb+srv://joy_sharo:Joy@123456@atlascluster.l2inhnf.mongodb.net/test
